<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".setup">

    <EditText
        android:id="@+id/firstNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/firstNameTxt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/secondary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/surnameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/surnameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/surnameTxt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/secondary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addressTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTxt" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTxt"
        android:textColor="@color/statusGreen"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/setupInstructionText"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

    <EditText
        android:id="@+id/addressTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/addressTxt"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/passportIDTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameTxt" />

    <EditText
        android:id="@+id/passportIDTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/passportIDTxt"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/agreementCheckBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTxt" />

    <CheckBox
        android:id="@+id/agreementCheckBtn"
        style="@android:style/Widget.Holo.CompoundButton.CheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="agreementBtnCheck"
        android:text="@string/agreementCheckBtn"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passportIDTxt" />

    <Button
        android:id="@+id/submitBtn"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:background="@color/darkButtonBack"
        android:enabled="false"
        android:onClick="closeSetup"
        android:text="@string/submitBtn"
        android:textSize="18sp"
        android:theme="@android:style/Widget.Holo.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreementCheckBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>