<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/statusColourContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_dark"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/verticalStatusContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@android:color/background_dark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:text="@string/nameTxtView"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addressTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:text="@string/addressTxtView"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/passportNumTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:text="@string/nameTxtView"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/passportNumTxtView" />

            <TextView
                android:id="@+id/statusTxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="8dp"
                android:text="@string/statusTxtView"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusValueTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtonLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusColourContainer">

        <Button
            android:id="@+id/covidUpdatesBtn"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@color/darkButtonBack"
            android:hint="@string/covidUpdatesBtnHint"
            android:scrollbars="none"
            android:text="@string/covidUpdatesBtnText"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/reportSymptomsBtn"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@color/darkButtonBack"
            android:scrollbars="none"
            android:text="@string/reportSymptomsBtnTxt"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@color/darkButtonBack"
            android:scrollbars="none"
            android:text="Button"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>